--- a/style.css
+++ b/style.css
@@ -2,30 +2,30 @@ h1 {
     text-align: center;
   }
 
-  section#color-palette {
+#color-palette {
     width: 220px;
     height: 50px;
   }
 
-  .color {
+.color {
     display: inline-block;
     border: 1px solid black;
     width: 50px;
     height: 50px;
   }
 
-  .red {
+.red {
     backGround-color: red;
   }
 
-  .blue {
+.blue {
     background-color: blue;
   }
 
-  .green {
+.green {
     background-color: green;
   }
 
-  .black {
+.black {
     background-color: black;
   }
