--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ main {
     background-color: rgb(255, 0, 0);
 }
 
-.blue {
-    background-color: rgb(26, 26, 218);
+.black {
+    background-color: rgb(0, 0, 0);
 }
 
 .green {
