--- a/style.css
+++ b/style.css
@@ -25,3 +25,10 @@
   width: 40px;
   display: inline-block;
 }
+.pixel {
+  height: 40px;
+  width: 40px;
+  display: inline-block;
+  border: 1px solid black;
+  background-color: white;
+}
