--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 
 .color {
   display: inline-block;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border: 1px solid black;
 }
 
@@ -27,4 +27,12 @@ body {
 
 #blueviolet {
   background-color: blueviolet;
+}
+
+.pixel {
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  display: inline-block;
+  background-color: white;
 }
