--- a/style.css
+++ b/style.css
@@ -31,3 +31,28 @@
 .red {
     background-color: red;
 }
+
+#pixel-board {
+    margin: auto;
+    width: 200px;    
+    height: 200px;
+}
+
+.pixel {
+  background-color: white;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  display: inline-block;  
+  margin: -3px;
+}   
+
+#div {
+    display: flex;
+    justify-content: center;
+    padding: 20px  ;
+}
+
+.button {
+    margin: 0 10px 0 10px;
+}
