--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h1 {
 .pixel {
     background-color: white;
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
 }
