--- a/style.css
+++ b/style.css
@@ -1,1 +1,31 @@
+.containerPalette {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  border: 1px solid black;
+}
 
+.green {
+  background-color: darkgreen;
+  background: darkgreen;
+}
+
+.blue {
+  background-color:blue;
+  background: blue;
+}
+
+.red {
+  background-color: red;
+  background: red;
+}
+
+.gray {
+  background-color: gray;
+  background: gray;
+}
+
+.black {
+  background-color: black;
+  background: black;
+}
