--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
-.color{
+.color {
+  display: inline-block;
   border: 1px solid black;
+  height: 50px;
+  width: 50px;
+}
+
+.first{
+  background-color:black;
+}
+
+.second {
+  background-color: red;
+}
+
+.third{
+  background-color:blue
+}
+
+.fourth{
+  background-color: green
 }
