--- a/style.css
+++ b/style.css
@@ -23,12 +23,13 @@ section .orange {
 
 /* Pixel board */
 #pixel-board {
-	width: 250px;
+  width: 250px;
 }
 
 .pixel {
-	width: 40px;
-	height: 40px;
-	border: solid 1px black;
-	display: inline-block;
+  width: 40px;
+  height: 40px;
+  border: solid 1px black;
+  display: inline-block;
+	background-color: white;
 }
