--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 .red {
-  backGround-color: red;
+  background-color: red;
 }
 
 .blue {
@@ -31,15 +31,15 @@ h1 {
 }
 
 .line {
-    display: block;
-    width: 300px;
-    height: 50px;
+  display: block;
+  width: 300px;
+  height: 50px;
 }
 
 .pixel {
-    background-color: white;
-    display: inline-block;
-    border: 1px solid black;
-    width: 40px;
-    height: 40px;
+  background-color: white;
+  display: inline-block;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
 }
