--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
 #title {
-    text-align: center;
+  text-align: center;
+}
+
+#color-pallete {
+  text-align: center;
+  margin: auto;
+}
+
+.color {
+  display: inline-block;
+  border: 1px solid black;
+  width: 60px;
+  height: 60px;
+  margin: 12px;
+}
+
+#pallete-section {
+  text-align: center;
+}
+
+#black {
+  background-color: black;
+}
+
+#red {
+  background-color: red;
+}
+
+#green {
+  background-color: green;
+}
+
+#blue {
+  background-color: blue;
 }
