--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .color {
   border: 1px solid black;
   display: inline-block;
-  width: 85px;
-  height: 85px;
+  width: 75px;
+  height: 75px;
 }
 
 .color:nth-of-type(1) {
@@ -19,4 +19,12 @@
 
 .color:nth-of-type(4) {
   background-color: rgb(231, 111, 81);
+}
+
+.pixel {
+  background-color: white;
+  border: 1px solid black;
+  display: inline-block;
+  height: 50px;
+  width: 50px;
 }
