fix: size of pixel

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: sans-serif;
+}
+
 .container {
   max-width: 500px;
   margin: 0 auto;
@@ -41,11 +45,13 @@
 
 .line1 , .line2 , .line3 , .line4 , .line5 {
   display: flex;
+  justify-content: center;
 }
 
 .pixel {
+  background-color: white;
   cursor: pointer;
-  height: 100px;
-  width: 100px;
+  height: 40px;
+  width: 40px;
   border: 1px solid black;
 }
