--- a/style.css
+++ b/style.css
@@ -2,3 +2,18 @@
   margin: 0;
   padding: 0;
 }
+
+section {
+  margin: 30px;
+}
+
+#title {
+  margin: 30px;
+}
+
+.color {
+  border: 1px solid black;
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+}
