--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ header{
 }
 
 .container {
-  border: 1px solid #000;
   margin: auto;
   width: 80%;
 }
 
 #color-palette {
   display: flex;
+  padding: 10px;
   justify-content: center;
 }
 
@@ -35,4 +35,31 @@ header{
   border: 1px solid #000;
   height: 50px;
   width: 50px;
+}
+
+.black {
+  background-color: rgb(0, 0, 0);
+}
+
+.green {
+  background-color: rgba(57, 134, 57, 0.753);
+}
+
+.yellow {
+  background-color: rgba(255, 255, 0, 0.705);
+}
+
+.orange {
+  background-color: orange
+}
+
+#pixel-board {
+  text-align: center;
+}
+
+.pixel {
+  border: 1px solid #000;
+  display: inline-block;
+  height: 40px;
+  width: 40px;
 }
