--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h1 {
 }
 
 #color-palette {
-  width: 220px;
+  width: 250px;
   height: 50px;
 }
 
@@ -42,4 +42,11 @@ h1 {
   border: 1px solid black;
   width: 40px;
   height: 40px;
+}
+
+.selected {
+}
+
+#pixel-board {
+	border: 20px solid white;
 }
