--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@
   height: 100px;
 }
 
+.pixel {
+  display: inline-block;
+  border: 1px solid rgb(0, 0, 0);
+  width: 100px;
+  height: 100px;
+  background-color: white;
+}
+
 .corBlack {
   background-color: black;
 }
