--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: cornflowerblue;
+}
+
+.title__content {
+  text-align: center;
+  padding-top: 50px;
+}
+
 .black {
   background-color: black;
 }
@@ -20,5 +37,23 @@
   height: 50px;
   border-radius: 50%;
   display: inline-block;
-  justify-content: center;
+  margin: 10px auto;
+}
+
+.color__content {
+  width: 100%;
+  text-align: center;
+}
+
+#pixel-board {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  margin: 10px auto;
+  width: 200px;
+}
+.pixel {
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  background-color: #fff;
 }
