--- a/style.css
+++ b/style.css
@@ -1,7 +1,39 @@
+:root {
+    --pixel-size: 100px;
+}
+
+body {
+    background-color: rgb(255, 236, 236);
+}
+
 .color {
     border: 1px solid black;
     width: 50px;
     height: 50px;
     display: inline-block;
     margin: 1px;
+}
+
+.color:hover {
+    cursor: pointer;
+}
+
+#pixel-board {
+    border: 1px solid black;
+    width: calc(var(--pixel-size) * 5);
+    height: calc(var(--pixel-size) * 5);
+    overflow: hidden;
+    font-size: 0;
+}
+
+.pixel {
+    width: var(--pixel-size);
+    height: var(--pixel-size);
+    display: inline-block;
+    background-color: white;
+    margin-bottom: 0;
+}
+
+.pixel:hover {
+    cursor: pointer;
 }
