--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@
   padding: 0;
   margin: 0;
 }
+.container {
+  margin: auto;
+  text-align: center;
+  width: calc(80% - 80px);
+}
+.color {
+  border: 1px solid #000;
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+}
+.color:nth-child(1) {
+  background-color: #000;
+}
+.color:nth-child(2) {
+  background-color: #f00;
+}
+.color:nth-child(3) {
+  background-color: #00f;
+}
+.color:nth-child(4) {
+  background-color: #008000;
+}
+.pixel {
+  border: 1px solid #000;
+  display: inline-block;
+  min-height: 40px;
+  min-width: 40px;
+  background-color: #fff;
+}
+main {
+  margin-top: 100px;
+}
+header {
+  padding-top: 25px;
+}
