--- a/style.styl
+++ b/style.styl
@@ -1,4 +1,36 @@
 *
-    box-sizing: border-box
-    padding: 0
-    margin: 0
+  box-sizing: border-box
+  padding: 0
+  margin: 0
+
+.container
+  margin: auto
+  text-align: center
+  width: calc(80% - 80px)
+
+.color
+  border: 1px solid black
+  display: inline-block
+  height: 50px
+  width: @height
+  &:nth-child(1)
+    background-color: black
+  &:nth-child(2)
+    background-color: red
+  &:nth-child(3)
+    background-color: blue
+  &:nth-child(4)
+    background-color: green
+  
+.pixel
+  border: 1px solid black
+  display: inline-block
+  min-height: 40px
+  min-width: @min-height
+  background-color: white
+
+main
+  margin-top: 100px
+
+header
+  padding-top: 25px
