--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .color {
   display: inline-block;
   border: 1px solid black;
@@ -19,4 +23,12 @@
 
 .fourth{
   background-color: green
+}
+
+.pixel{
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  border: 1px solid black;
+  background-color: white;
 }
