--- a/style.css
+++ b/style.css
@@ -7,3 +7,14 @@
   height: 100px;
   border: 1px solid black;
 }
+
+.pixel {
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+}
+
+.boardLine {
+  display: flex;
+}
