--- a/style.css
+++ b/style.css
@@ -17,12 +17,25 @@ table{
 table tr td{
   width: 40px;
   height: 40px;
-  background-color: #FFFFFF;
   border: 1px solid black;
+  background-color: #FFF;
 }
 
 #clear-board{
   width: 60px;
   height: 20px;
   margin-left: 40px;
+  margin-bottom: 20px;
+}
+
+#board-size {
+  margin-left: 40px;
+  margin-bottom: 20px;
+}
+
+#generate-board {
+  width: 60px;
+  height: 20px;
+  margin-left: 10px;
+  margin-bottom: 20px;
 }
