--- a/style.css
+++ b/style.css
@@ -55,6 +55,9 @@ header{
 
 #pixel-board {
   text-align: center;
+  border: 1px solid #000;
+  width: 50%;
+  margin: auto;
 }
 
 .pixel {
@@ -62,4 +65,5 @@ header{
   display: inline-block;
   height: 40px;
   width: 40px;
+  background-color: #fff;
 }
