--- a/style.styl
+++ b/style.styl
@@ -29,6 +29,12 @@
   min-width: @min-height
   background-color: white
 
+#pixel-board
+  margin-top: 50px
+
+.pixel-row
+  height: 40px
+
 main
   margin-top: 100px
 
