--- a/style.css
+++ b/style.css
@@ -44,3 +44,15 @@ main {
     height: 40px;
     width: 40px;
 }
+
+.btn {
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 10%;
+    margin: 10px;
+    padding: 5px 10px;
+}
+.btn:hover {
+    cursor: pointer;
+    background-color: rgb(128, 128, 128);
+    font-weight: 600;
+}
