--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 .color {
   border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  margin-bottom: 25px;
+}
+
+.pixel {
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  margin-bottom: 0;
+  background-color: white;
+}
+
+.line {
+  height: 41px;
 }
