--- a/style.css
+++ b/style.css
@@ -1,22 +1,40 @@
 body {
-    text-align: center;
+  text-align: center;
 }
+
 #title {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 #color-pallete {
-    display: flex;
-    justify-content: center;
-    margin: auto;
+  display: flex;
+  justify-content: center;
+  margin: auto;
 }
 
 .color {
-    display: inline-block;
-    border: 1px solid black;
-    margin: 7px 4px auto 5px;
-    padding: 24px;
-    width: 35px;
-    height: 35px;
+  display: inline-block;
+  border: 1px solid black;
+  margin: 7px 4px auto 5px;
+  padding: 24px;
+  width: 35px;
+  height: 35px;
+}
+
+#pixel-board {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  border: 1px solid black;
+  margin: 10px;
+  width: 210px;
+  height: 210px;
+}
+
+.pixel {
+  display: table-cell;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  background-color: rgb(255, 255, 255);
 }
