--- a/style.css
+++ b/style.css
@@ -3,21 +3,21 @@
 }
 
 .cblack {
-  background-color: black;
+  /* background-color: black; */
   border: 1px solid black;
 }
 
 .cblue{
-  background-color: blue;
+  /* background-color: blue; */
   border: 1px solid black;
 }
 
 .cred {
-  background-color: red;
+  /* background-color: red; */
   border: 1px solid black;
 }
 .cgreen {
-  background-color: green;
+  /* background-color: green; */
   border: 1px solid black;
 }
 .color {
