--- a/style.css
+++ b/style.css
@@ -5,19 +5,19 @@
   height: 75px;
 }
 
-.color:nth-of-type(1) {
-  background-color: rgb(0, 0, 0);
+.color:nth-of-type( 1 ) {
+  background-color: black;
 }
 
-.color:nth-of-type(2) {
+.color:nth-of-type( 2 ) {
   background-color: rgb(42, 157, 143);
 }
 
-.color:nth-of-type(3) {
+.color:nth-of-type( 3 ) {
   background-color: rgb(233, 196, 106);
 }
 
-.color:nth-of-type(4) {
+.color:nth-of-type( 4 ) {
   background-color: rgb(231, 111, 81);
 }
 
