Conclui requisito 4 e 5 e corrige o 2

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 #color-palette {
   height: 120px;
   width: 1000px;
@@ -7,6 +12,17 @@
   margin: 2px;
   height: 100px;
   width: 100px;
+  display: inline-block;
+  border: solid black 1px;
+}
+
+#pixel-board, .line {
+  width: 600;
+}
+
+.pixel {
+  width: 40px;
+  height: 40px;
   display: inline-block;
   border: solid black 1px;
 }
