--- a/style.css
+++ b/style.css
@@ -9,19 +9,19 @@ h1 {
   height: 55px;
 }
 
-table{
+table {
   margin-left: 40px;
   margin-bottom: 10px;
-}  
+}
 
-table tr td{
+table tr td {
   width: 40px;
   height: 40px;
   border: 1px solid black;
-  background-color: #FFF;
+  background-color: white;
 }
 
-#clear-board{
+#clear-board {
   width: 60px;
   height: 20px;
   margin-left: 40px;
