--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
   border: 1px solid black;
-  margin: 10px;
+  margin: 32px auto;
   width: 210px;
   height: 210px;
 }
@@ -36,5 +36,5 @@ body {
   border: 1px solid black;
   width: 40px;
   height: 40px;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
 }
