--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
@@ -36,10 +36,17 @@ body {
   background-color: green;
 }
 
+#pixel-board {
+  background-color: white;
+  border: 1px solid black;
+  height: 226px;
+  width: 226px;
+}
+
 .pixel {
   background-color: white;
   border: 1px solid black;
   display: inline-block;
-  height: 95px;
-  width: 95px;
+  height: 40px;
+  width: 40px;
 }
