--- a/style.css
+++ b/style.css
@@ -11,15 +11,48 @@ main {
 #color-palette{
   display: flex;
 }
-.li{
-  display: inline-block;
-  border:solid black
-  
+.color{
+  height: 100px;
+  width: 100px;
 }
-.color {
-  border: 1px solid black;
-  cursor: pointer;
-  height: 40px;
-  margin: 0 5px;
-  width: 40px;
+  
+
+#bk {
+  background-color: black;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  display: inline-block;
+}
+
+#r {
+  background-color: red;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  display: inline-block;
+}
+#b {
+  background-color: blue;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  display: inline-block;
+}
+
+#g {
+  background-color: green;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  display: inline-block;
+}
+
+
+
+
+
+
+li{
+  list-style-type: none;
 }
