--- a/style.css
+++ b/style.css
@@ -17,3 +17,10 @@
 .color {
     border: 1px solid black;
 }
+
+.pixel {
+    width: 40px;
+    height: 40px;
+    border: 1px solid black;
+    background-color: white;
+}
