--- a/style.css
+++ b/style.css
@@ -48,8 +48,9 @@ h1 {
 }
 
 .selected {
+  border: 1px solid black;
 }
 
 #pixel-board {
-	border: 20px solid white;
+  border: 20px solid white;
 }
