--- a/style.css
+++ b/style.css
@@ -22,4 +22,19 @@ h1 {
     padding: 15px;
     width: 5px;
     height: 5px;
+    cursor: pointer;
+}
+
+#pixel-board {
+    width: 210px;
+    margin: 50px auto;
+    line-height: 0;
+}
+
+.pixel {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    display: inline-block;
+    border: solid black 1px;
 }
