--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 #title {
   color: red;
 }
+
+.color {
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  display: inline-block;
+}
+#preto {
+  background-color: black;
+}
+
+#cinza {
+  background-color: grey;
+}
+
+#vermelho {
+  background-color: red;
+}
+
+#roxo {
+  background-color: purple;
+}
