--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.containerPalette {
+.color {
   width: 50px;
   height: 50px;
   display: inline-block;
@@ -7,25 +7,33 @@
 
 .green {
   background-color: darkgreen;
-  background: darkgreen;
 }
 
 .blue {
   background-color:blue;
-  background: blue;
 }
 
 .red {
   background-color: red;
-  background: red;
 }
 
 .gray {
   background-color: gray;
-  background: gray;
 }
 
 .black {
   background-color: black;
-  background: black;
 }
+
+.gridColumns {
+  height: 50px;
+}
+
+.pixel {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  display: inline-block;
+  background-color: white;
+}
+
