--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-div {
-  display:inline-block;
-  border:solid;
+.color {
+  display: inline-block;
+  border: solid;
   width: 25px;
   height: 25px;
   border-color: black;
@@ -21,4 +21,18 @@ div {
 
 #color4 {
   background-color: yellow;
+}
+
+.pixel {
+  width: 40px;
+  height: 40px;
+  border: solid;
+  border-color: black;
+  border-width: 1px;
+  display: inline-block;
+  background-color: white;
+}
+
+#pixel-board {
+
 }
