--- a/style.css
+++ b/style.css
@@ -14,14 +14,16 @@
 #color-palette{
 
     width: 220px;
-    height: 200px;
-    margin: auto;    
+    height: 50px;
+    padding-bottom: 40px;
+    margin: auto;
+    font-size: 0;    
 }
 
 
 .color {
-    width: 50px;
-    height: 50px;
+    width: 49px;
+    height: 49px;
     border: 1px solid black;
     display: inline-block;
 }
@@ -40,4 +42,20 @@
 
 #yellow {
     background-color: yellow;
+}
+
+#pixel-board {
+    width: 310px;
+    height: 310px;
+    padding: 0;
+    border: 1px solid black;
+    margin: auto;
+    font-size: 0;
+}
+.pixel {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    border: 1px solid black;
+    background-color: rgb(255,255,255);
 }
