--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,500;1,600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,500;1,600&display=swap') ; */
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: Arial, sans-serif;
   text-align: center;
 }
-
+#title {
+  margin-bottom: 30px;
+}
 
 .color {
   width: 40px;
   height: 40px;
-  border: solid 3px rgb(5, 0, 0);
+  border: solid 1px black;
   display: inline-block;
+}
+
+#color-pallete {
+  margin: 10px;
+  border: 5px;
 }
 
 #cor1 {
