--- a/style.styl
+++ b/style.styl
@@ -3,6 +3,17 @@
   padding: 0
   margin: 0
 
+.btn
+  background-color: #a5a5a5;
+  border-style: none
+  border-radius: 5px
+  padding: 5px 20px
+  &:hover
+    background-color: #a50000
+
+#clear-board
+  margin-top: 15px
+
 .container
   margin: auto
   text-align: center
