--- a/style.css
+++ b/style.css
@@ -10,13 +10,15 @@
 .color {
   display: inline-block;
   border: 1px solid black;
-  width: 60px;
-  height: 60px;
+  width: 30px;
+  height: 30px;
   margin: 12px;
 }
 
 #pallete-section {
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #black {
@@ -33,4 +35,31 @@
 
 #blue {
   background-color: blue;
+}
+
+#pixel-container {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 250px;
+  height: 250px;
+}
+
+#pixel-board {
+  width: 250px;
+  height: 250px;
+}
+
+.pixels-div {
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+}
+
+.pixel {
+  width: 38px;
+  height: 38px;
+  border: 1px solid black;
+  display: inline-block;
+  margin: 1px;
 }
