correctiong based on lint

--- a/style.css
+++ b/style.css
@@ -3,57 +3,71 @@
   padding: 0;
   margin: 0;
 }
+
 .btn {
   background-color: #a5a5a5;
   border-style: none;
   border-radius: 5px;
   padding: 5px 20px;
 }
+
 .btn:hover {
   background-color: #a50000;
 }
+
 #clear-board {
   margin-top: 15px;
 }
+
 .container {
   margin: auto;
   text-align: center;
   width: calc(80% - 80px);
 }
+
 .color {
-  border: 1px solid #000;
+  border: 1px solid black;
   display: inline-block;
   height: 50px;
   width: 50px;
 }
-.color:nth-child(1) {
-  background-color: #000;
+
+.color:nth-child( 1 ) {
+  background-color: black;
 }
-.color:nth-child(2) {
-  background-color: #f00;
+
+.color:nth-child( 2 ) {
+  background-color: red;
 }
-.color:nth-child(3) {
-  background-color: #00f;
+
+.color:nth-child( 3 ) {
+  background-color: blue;
 }
-.color:nth-child(4) {
-  background-color: #008000;
+
+.color:nth-child( 4 ) {
+  background-color: green;
 }
+
 .pixel {
-  border: 1px solid #000;
+  border: 1px solid black;
   display: inline-block;
   min-height: 40px;
   min-width: 40px;
-  background-color: #fff;
+  background-color: white;
 }
+
 #pixel-board {
   margin-top: 50px;
 }
+
 .pixel-row {
   height: 40px;
 }
+
 main {
   margin-top: 100px;
 }
+
 header {
   padding-top: 25px;
 }
