--- a/style.css
+++ b/style.css
@@ -1,22 +1,38 @@
 .color {
-    border: solid black 1px;
-    display: inline-block;
-    width: 50px;
-    height: 50px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: solid black 1px;
 }
 
 #black {
-    background-color: black;
+  background-color: black;
 }
 
 #red {
-    background-color: red;
+  background-color: red;
 }
 
 #blue {
-    background-color: blue;
+  background-color: blue;
 }
 
 #green {
-    background-color: green;
+  background-color: green;
 }
+
+#pixel-board {
+  border: solid black 1px;
+  font-size: 0;
+  width: 260px;
+  height: 260px;
+}
+
+.pixel {
+  background-color: white;
+  border: solid black 1px;
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+}
+
