--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@
     width: 50px;
     height: 50px;
 }
+.pixel{
+    border: solid 1px black;
+    background-color: white;
+    width: 50px;
+    height: 50px;
+}
