--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 section {
@@ -14,34 +13,24 @@ section {
 
 .color {
   border: 1px solid black;
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   display: inline-block;
+}
+
+#pixel-board {
+  border: 1px solid black;
+  width: 210px;
 }
 
 .pixelLine {
-  margin: 0;
-  height: 100px;
-  width: 500px;
-}
-
-.pixelLine:nth-of-type( odd ) {
-  border: 1px solid black;
-}
-
-.pixelLine:nth-of-type( even ) {
-  border-right: 1px solid black;
-  border-left: 1px solid black;
+  height: 42px;
 }
 
 .pixel {
-  border-right: 1px solid black;
-  width: 20%;
-  height: 100%;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
   display: inline-block;
   background-color: white;
-}
-
-.pixel:last-of-type {
-  border-right: 0;
 }
