--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
 }
 
 .color {
-  height: 100%;
-  width: 50px;
+  height: 48px;
+  width: 48px;
   border: 1px black solid;
   display: inline-block;
 }
@@ -40,4 +40,18 @@ body {
 
 .green {
   background-color: green;
+}
+
+#pixel-board {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.pixel {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  border: black 1px solid;
+  background-color: white;
 }
