--- a/style.css
+++ b/style.css
@@ -5,17 +5,12 @@
     color: brown;
     text-align:center;
 }
-.square{
-    width: 450px;/*largura*/
-    height: 50px;/*altura*/
-}
 #color-palette{
     display: inline-flex;
     background-color: #bab8b5;
     border: 1px solid black;
     width: min-content;
     margin-left: 40%;
-    margin-right: 40%;
 }
 .color{
     border: 1px solid black;
@@ -35,4 +30,19 @@
 }
 .box-yellow{
     background-color: yellow;
+}
+#conteiner{
+    margin-top: 10px;
+}
+#pixel-board{
+    display: inline-flex;
+    width: min-content;
+    margin-left: 41%;
+}
+.pixel{
+    background-color: white;
+    border: 1px solid black;
+    padding: 25px;
+    margin: 5px;
+    
 }
