--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
   text-align: center;
 }
 
-.selected {
+/* .selected {
   animation-name: selected;
   animation-duration: 1s;
   animation-iteration-count: infinite;
@@ -41,7 +41,7 @@
     border: rgb(240, 116, 0) 1px solid;
     border-radius: 10px;
   }
-}
+} */
 
 #black {
   background-color: #000;
@@ -61,12 +61,17 @@
 
 #pixel-board {
   display: block;
+  max-width: 250px;
+  margin-left: auto;
   margin-top: 40px;
+  margin-right: auto;
   text-align: center;
 }
 
 .pixel {
   border: 1px solid #000;
   display: inline-block;
-  padding: 25px;
+  height: 40px;
+  margin: 2px;
+  width: 40px;
 }
