--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@ body {
   margin: 15px;
 }
 
-.colorBlue {
+.colorBlack {
   background-color: black;
 }
 
-.colorYellow {
+.colorBlue {
   background-color: blue;
 }
 
