--- a/style.css
+++ b/style.css
@@ -31,13 +31,17 @@ body {
   background-color: blue;
 }
 
+.color:hover {
+  cursor: pointer;
+}
+
 .color {
   border: 1px solid black;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   display: inline-block;
-  margin: 10px auto;
+  margin: 10px 10px;
 }
 
 .color__content {
@@ -55,5 +59,14 @@ body {
   width: 40px;
   height: 40px;
   border: 1px solid black;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
+}
+
+#clear-board {
+  font-size: 18px;
+  padding: 5px;
+}
+
+.btn-content {
+  text-align: center;
 }
