--- a/style.css
+++ b/style.css
@@ -1,26 +1,30 @@
 .color {
-    border: 4px solid black;
-    display: inline-block;
-    height: 150px;
-    width: 150px;
+  border: 1px solid black;
+  height: 50px;
+  width: 50px;
+  display: inline-block;
 }
 
-#laranja {
-    background-color: rgb(247, 136, 14);
+.laranja {
+  background-color: rgb(247, 136, 14);
 }
 
-#marrom {
-    background-color: rgb(154, 49, 29);
+.marrom {
+  background-color: rgb(154, 49, 29);
 }
 
-#verde-claro {
-    background-color: rgb(77, 255, 0);
+.verde-claro {
+  background-color: rgb(77, 255, 0);
 }
 
-#verde-escuro{
-    background-color: rgb(34, 128, 0);
+.preto {
+  background-color: black;
 }
 
-#preto {
-    background-color: black;
+.pixel {
+  display: inline-block;
+  border: 1px solid black;
+  height: 40px;
+  width: 40px;
+  background-color: white;
 }
