--- a/style.css
+++ b/style.css
@@ -32,6 +32,20 @@ body{
   background-color: red;
 }
 
+.pixel{
+  background-color: white;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border:solid black 1px;
+}
+
+#pixel-board{
+  margin-top: 50px;
+  text-align: center;
+  line-height: 0%;
+}
+
 #title{
   color: white;
   font-family: 'Times New Roman', Times, serif;
