--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
   border: 1px solid black;
   display: inline-block;
   margin: 0 10px;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
 }
 
 .black {
@@ -26,8 +26,14 @@
   background-color: white;
 }
 
+.board-line {
+  margin: 0;
+  padding: 0;
+}
+
 .pixel {
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
 }
