--- a/style.css
+++ b/style.css
@@ -13,9 +13,15 @@
     width: 50px;
     height: 50px;
 }
+#pixel-board{
+    border: solid 1px black;
+}
 .pixel{
     border: solid 1px black;
     background-color: white;
     width: 50px;
     height: 50px;
+}
+.linha{
+    display: inline-block;
 }
