--- a/style.css
+++ b/style.css
@@ -3,9 +3,24 @@
   padding: 0;
 }
 
+body {
+  margin-top: 50px;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+button {
+  padding: 5px 15px;
+  font-size: 18px
+}
+
+header {
+  margin: 20px;
+}
+
 #color-palette {
-  height: 120px;
-  width: 1000px;
+  max-width: 60%;
+  margin: auto;
 }
 
 .color {
@@ -16,8 +31,14 @@
   border: solid black 1px;
 }
 
-#pixel-board , .line {
+#pixel-board {
   width: 600;
+  margin-top: 10px;
+}
+
+.line {
+  max-width: 60%;
+  margin: auto;
 }
 
 .pixel {
@@ -25,4 +46,8 @@
   height: 40px;
   display: inline-block;
   border: solid black 1px;
+}
+
+.selected {
+  /* transform: translateY(-20px); */
 }
