--- a/style.css
+++ b/style.css
@@ -6,17 +6,17 @@
 }
 
 #colorBlack {
-  background-color: #000;
+  background-color: black;
 }
 
 #colorRed {
-  background-color: #f00;
+  background-color: red;
 }
 
 #colorYellow {
-  background-color: #ff0;
+  background-color: yellow;
 }
 
 #colorGreen {
-  background-color: #008000;
+  background-color: green;
 }
