--- a/style.css
+++ b/style.css
@@ -5,12 +5,8 @@
   display: inline-block;
 }
 
-.vermelho{
-  background-color: red;
-}
-
 .ouro{
-  background-color: gold;
+  background-color: black;
 }
 
 .verde{
