--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    background-color: grey;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+}
+
 /*Header*/
 
 header {
@@ -10,24 +15,27 @@ header {
     height: 80px;
 }
 
-h1 {
+#title {
     text-align: center;
 }
 
 /*Cores*/
 
 #color-palette {
-    margin: 100px auto;
+    margin: 100px auto 20px;
     width: 530px;
-    height: 140px;
+    height: 150px;
     border: solid black 2px;
     text-align: center;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .color {
     border: solid black 1px;
-    width: 100px;
-    height: 100px;
+    border-radius: 50%;
+    width: 107px;
+    height: 107px;
     margin: 20px 10px;
     display: inline-block;
 }
@@ -46,4 +54,22 @@ h1 {
 
 #green {
     background-color: green;
+}
+
+/*Pixel Board */
+
+#pixel-board {
+    height: 210px;
+    width: 210px;
+    margin: auto;
+    background-color: white;
+}
+
+.pixel {
+    width: 40px;
+    height: 40px;
+    position: ;
+    border: solid black 1px;
+    background-color: white;
+    display: inline-block;
 }
