--- a/style.css
+++ b/style.css
@@ -1,29 +1,45 @@
-#color-palette {
-  background-color: black;
-  border: 1px solid black ;
-  float: left;
-}
-
 #paletablack {
   background-color: black;
   border: 1px solid black ;
-  float: left;
+  width: 100px;
+  height: 100px;
+  display: inline-block;
 }
 
 #paletared {
   background-color: red;
   border: 1px solid black ;
-  float: left;
+  width: 100px;
+  height: 100px;
+  display: inline-block;
 } 
 
 #paletagreen {
   background-color: green;
   border: 1px solid black ;
-  float: left;
+  width: 100px;
+  height: 100px;
+  display: inline-block;
 }
 
 #paletablue {
   background-color: blue;
   border: 1px solid black ;
-  float: left;
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+}
+
+#pixel-board {
+  display: inline-block;
+  border: 1px solid black ;
+  width: 210px;
+  height: 250px;
+}
+
+.pixel {
+  display: inline-block;
+  border: 1px solid black ;
+  width: 40px;
+  height: 40px;
 }
