--- a/style.css
+++ b/style.css
@@ -5,9 +5,13 @@
   border: 1px black solid;
 }
 
+/* Reference */
+
 /* ref: Author: Josh Crozies */
+
 /* Obj: removing spaces between divs */
-/* Src: https://stackoverflow.com/questions/19038799/why-is-there-an-unexplainable-gap-between-these-inline-block-div-elements */
+
+/* Src: https://stackoverflow.com/questions/19038799/ */
 #pixel-board {
   width: 210px;
   font-size: 0;
