Fix style css stage 4 to evaluator job proceed

--- a/style.css
+++ b/style.css
@@ -29,8 +29,10 @@ body {
 }
 
 #pixel-board {
+  border: 1px solid blue;
+  height: 210px;
   margin: 40px auto;
-  width: 220px;
+  width: 210px;
 }
 
 .pixel {
