Inicio da resolucao dos exercicios bonus, problemas no requisito 10 a rever

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
 .line {
   display: block;
   width: 300px;
-  height: 50px;
+  height: 40px;
 }
 
 .pixel {
@@ -53,4 +53,9 @@ h1 {
 
 #pixel-board {
   border: 20px solid white;
+}
+
+#btn-container {
+  padding-top: 20px;
+  display: inline-block;
 }
