--- a/style.css
+++ b/style.css
@@ -46,3 +46,24 @@ h1 {
 .random3 {
   background-color: yellow;
 }
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding: 25px;
+  width: 85%;
+}
+#pixel-board {
+  border: solid black 1px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.pixel {
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  display: inline-block;
+  border: solid black 1px;
+  text-align: center;
+}
