--- a/style.css
+++ b/style.css
@@ -1,56 +1,41 @@
-#color-palette {
-  
-}
-
 .color {
-  width: 50px;
-  height: 100px;
-  border: 1px solid black;
+  width: 40px;
+  height: 50px;
   display: inline-block;
-
+  border: 1px solid black;
+  border-collapse: collapse;
 }
+
 
 #firstColor {
   background-color: black;
 }
 
 #secondColor {
-  background-color: rgb(0, 47, 99);
+  background-color: rgb(46, 197, 6);
 }
-
 
 #thirdColor {
   background-color: rgb(32, 178, 170);
 }
 
 #fourthColor {
-  background-color: rgb(116, 52, 138);
-}
-
-#fifthColor {
   background-color: rgb(255, 0, 126);
 }
 
-#sixthColor {
-  background-color: rgb(252, 105, 115);
+#pixel-board {
+  display: inline-block;
+  font-size: 0;
+  width: 210px;
+  height: 210px;
 }
 
-#seventhColor {
-  background-color: rgb(247, 13, 27);
+.pixel {
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  border: 1px solid black;
 }
-
-#eighthColor {
-  background-color: rgb(255, 255, 0);
-}
-
-#ninthColor {
-  background-color: rgb(46, 197, 6);
-}
-
-#tenthColor {
-  background-color: rgb(89, 38, 11);
-}
-
 
 
 
