--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 #title {
   border-bottom: 2px solid teal;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Courier New, Courier, monospace;
   margin-bottom: 20px;
   text-align: center;
 }
