--- a/style.css
+++ b/style.css
@@ -1,65 +1,66 @@
 * {
-    border: 0;
-    margin: 0;
-    padding: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
 
 main {
-    text-align: center;
+  text-align: center;
 }
 
 .color {
-    border: 1px solid rgb(0, 0, 0);
-    display: inline-block;
-    height: 40px;
-    width: 40px;
+  border: 1px solid black;
+  display: inline-block;
+  height: 40px;
+  width: 40px;
 }
 
 .red {
-    background-color: rgb(255, 0, 0);
+  background-color: red;
 }
 
 .black {
-    background-color: rgb(0, 0, 0);
+  background-color: black;
 }
 
 .green {
-    background-color: rgb(0, 128, 0);
+  background-color: green;
 }
 
 .yellow {
-    background-color: rgb(255, 255, 0);
+  background-color: yellow;
 }
 
 .pixel-line {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .pixel {
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgb(0, 0, 0);
-    display: inline-block;
-    line-height: initial;
-    height: 40px;
-    width: 40px;
+  background-color: white;
+  border: 1px solid black;
+  display: inline-block;
+  line-height: initial;
+  height: 40px;
+  width: 40px;
 }
 
 .btn {
-    border: 1px solid rgb(0, 0, 0);
-    border-radius: 10%;
-    margin: 10px;
-    padding: 5px 10px;
+  border: 1px solid black;
+  border-radius: 10%;
+  margin: 10px;
+  padding: 5px 10px;
 }
+
 .btn:hover {
-    cursor: pointer;
-    background-color: rgb(128, 128, 128);
-    font-weight: 600;
+  cursor: pointer;
+  background-color: gray;
+  font-weight: 600;
 }
 
 #board-size {
-    border: 1px solid rgb(0, 0, 0);
-    height: 25px;
-    text-align: center;
-    width: 60px;
+  border: 1px solid black;
+  height: 25px;
+  text-align: center;
+  width: 60px;
 }
