--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
   height: 35px;
 }
 
+#clear-board {
+  margin-top: 28px;
+}
+
 #pixel-board {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
