--- a/style.css
+++ b/style.css
@@ -1,12 +1,29 @@
+.pixel {
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  display: inline-block;
+  border: 1px black solid
+  
+ 
+}
+
+#pixel-board {
+  width: 200px;
+  height: 200px;
+  font-size: 0px;
+  border: 5px solid black;
+}
+
 #title{
  text-align: center;
-}
+} 
 main {
   align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-} 
+ } 
 
 #color-palette{
   display: flex;
@@ -15,7 +32,6 @@ main {
   height: 100px;
   width: 100px;
 }
-  
 
 #bk {
   background-color: black;
