--- a/style.css
+++ b/style.css
@@ -26,12 +26,14 @@ header {
 
 #pixel-board {
     background-color: cornflowerblue;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 .linha {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-    height: 40px;
+    height: 42px;
 }
 
 .pixel {
