--- a/style.css
+++ b/style.css
@@ -4,9 +4,22 @@
 }
 
 .color {
-  display: flex;
+  display: inline-block;
   width: 100px;
   border: 1px solid black;
   margin-right: 10px;
+}
+
+#pixel-board {
+  display: grid;
+  grid-template-columns: repeat(5, 0fr);
+  margin-top: 10px;
+}
+
+.pixel {
+  border: 1px solid black;
+  background-color: white;
+  width: 40px;
+  height: 40px;
 }
 
