--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 h1 {
     font-family: 'Rampart One';
     font-size: 500%;
@@ -11,9 +9,9 @@ h1 {
 #color-palette {
     display: flex;
     justify-content: space-evenly;
-    margin: 5px auto;
+    margin: auto;
     /* border: 5px red solid; */
-    height: 40px;
+    height: 30px;
     width: 20%;
 }
 
@@ -26,7 +24,10 @@ h1 {
 }
 
 #pixel-board {
-    width: 210px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 220px;
     margin: 50px auto;
     line-height: 0;
 }
@@ -37,4 +38,10 @@ h1 {
     background-color: white;
     display: inline-block;
     border: solid black 1px;
+    cursor: pointer;
+}
+
+#button-div {
+    text-align: center;
+    margin-top: 50px;
 }
