--- a/style.css
+++ b/style.css
@@ -6,4 +6,16 @@
     display: inline-block;
 }
 
+.pixel{
+    width: 80px;
+    height: 80px;
+    border: black solid 1px;
+    display: inline-block;
+    margin-top: -4px;
+    background-color: white;
+}
+
+#pixel-board{
+    max-width: 450px;
+}
 
