--- a/style.css
+++ b/style.css
@@ -37,3 +37,9 @@ body {
 .color.red {background-color: red;}
 .color.orange {background-color: orange}
 .color.blue {background-color: blue;}
+
+#clear-board {
+    width: 120px;
+    margin: 30px;
+    margin-left: 46%;
+}
