--- a/style.css
+++ b/style.css
@@ -29,3 +29,8 @@
   display: inline-block;
   background-color: white;
 }
+
+.pixel1 {
+  display: block;
+  margin-right: window.screen.width - 40px;
+}
