--- a/style.css
+++ b/style.css
@@ -57,13 +57,16 @@ h1 {
   border: solid black 1px;
   text-align: center;
   box-sizing: border-box;
+  line-height: 0;
 }
 
 .pixel {
   width: 40px;
   height: 40px;
   background-color: white;
-  display: inline-block;
   border: solid black 1px;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-block;
 }
